# spoc

./: .gitignore  CMakeLists.txt  README.md  bufr_adpupa_prepbufr.py  bufr_adpupa_prepbufr_mapping.yaml
dump/mapping/: bufr_1bamua_mapping.yaml  bufr_adpsfc_prepbufr.py  bufr_adpsfc_prepbufr_mapping.yaml  bufr_adpupa_prepbufr.py  bufr_ahicsr.py  bufr_ahicsr.yaml  bufr_amsua.py  bufr_amsua_1bamua.yaml  bufr_amsua_esamua.yaml  bufr_atms.py  bufr_atms.yaml  bufr_cris-fsr.py  bufr_cris-fsr.yaml  bufr_gmi.yaml  bufr_gmi_mapping.yaml  bufr_iasi.py  bufr_iasi.yaml  bufr_marine_insitu_config.py  bufr_marine_insitu_obs_builder.py  bufr_marine_insitu_profile_argo.py  bufr_marine_insitu_profile_argo.yaml  bufr_marine_insitu_profile_bathy.py  bufr_marine_insitu_profile_bathy.yaml  bufr_marine_insitu_profile_glider.py  bufr_marine_insitu_profile_glider.yaml  bufr_marine_insitu_profile_tesac.py  bufr_marine_insitu_profile_tesac.yaml  bufr_marine_insitu_profile_tropical.py  bufr_marine_insitu_profile_tropical.yaml  bufr_marine_insitu_profile_xbtctd.py  bufr_marine_insitu_profile_xbtctd.yaml  bufr_marine_insitu_surface_altkob.py  bufr_marine_insitu_surface_altkob.yaml  bufr_marine_insitu_surface_cstgd.py  bufr_marine_insitu_surface_cstgd.yaml  bufr_marine_insitu_surface_drifter.py  bufr_marine_insitu_surface_drifter.yaml  bufr_marine_insitu_surface_lcman.py  (+50 more)
test/: config.py  oldmake_config_yaml.py  run_compare.py  test_framework.py
tests/: README.md  conftest.py  test_cases.py  test_functions.py  test_interfaces.py  test_mappings.py
tests/baseline/: README.md
tools/: CMakeLists.txt
(+49 files in other folders)
